tests/baselines/reference/ES5For-ofTypeCheck11.errors.txt
tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck11.ts(3,6): error TS2322: Type '文字 | 数字' is not assignable to type '文字'.
  Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/statements/for-ofStatements/ES5For-ofTypeCheck11.ts (1 errors) ====
    var union: string | number[];
    var v: string;
    for (v of union) { }
         ~
!!! error TS2322: Type '文字 | 数字' is not assignable to type '文字'.
!!! error TS2322:   Type '数字' is not assignable to type '文字'.